--- a/main.tex
+++ b/main.tex
@@ -44,7 +44,9 @@
     
 \newcommand{\mat}[1]{\mathbf{#1}}
 
-\title{Are latent feature/class models adapted for link prediction in social networks?}
+\title{Nonparametric Latent feature/class Analysis for Link Prediction in Social Networks}
+%\title{Are latent feature/class models adapted for link prediction in social networks?}
+%\title{Mixed Membership Models Analysis for Social Networks Topology}
 
 %\date{avril 2015}
 
