mean/var on gen grph

--- a/table_results.tex
+++ b/table_results.tex
@@ -21,7 +21,7 @@ K = 5\hspace{5pt}
 \begin{minipage}[h]{0.45\linewidth}
 \begin{tabular}{lrrrr}
 \hline
- IBP    &   global &   precision &   recall &     K-\ensuremath{>} \\
+ ILFRM    &   global &   precision &   recall &     K-\ensuremath{>} \\
 \hline
  Network1 b/h        &   0.9905 &      0.0401 &   0.0455 & 21 \\
  Network2 b/-h     &   0.9924 &      0.0439 &   0.0545 & 19 \\
@@ -139,7 +139,7 @@ K =  5\hspace{5pt}
 \begin{minipage}[h]{0.45\linewidth}
 \begin{tabular}{lrlll}
 \hline
- IBP   &   global &   precision &   recall &     K-\ensuremath{>} \\
+ ILFRM   &   global &   precision &   recall &     K-\ensuremath{>} \\
 \hline
  Network1 b/h         &   0.5573 &      0.8958 &   0.0432 & 14 \\
  Network2 b/-h      &   0.5503 &      0.9000 &   0.0322 & 17 \\
