--- a/table_results.tex
+++ b/table_results.tex
@@ -6,27 +6,29 @@
 \caption{Predictive Performance on a UnBalanced Testing set}
 	\begin{minipage}[h]{0.45\linewidth} 
 K = 5\hspace{5pt}
-\begin{tabular}{lrrrr}
+\begin{tabular}{lllll}
 \hline
  IMMSB   &   global &   precision &   recall &    K-\ensuremath{>} \\
 \hline
- Network1 b/h          &   0.9896 &      0.0219 &   0.0236 & 5 \\
- Network2 b/-h       &   0.9918 &      0.0346 &   0.0361 & 5 \\
- Network3 -b/-h      &   0.9791 &      0.0292 &   0.0341 & 5 \\
- Network4 -b/h        &   0.8868 &      0.1517 &   0.1927 & 5 \\
+ Network1 b/h         &    0.990 &       0.029 &    0.032 & 5.0 $\pm$ 0.0 \\
+ Network2 b/-h       &    0.992 &       0.032 &    0.034 & 5.0 $\pm$ 0.0 \\
+ Network3 -b/h       &    0.979 &       0.031 &    0.034 & 5.0 $\pm$ 0.0 \\
+ Network4 -b/-h       &    0.887 &       0.151 &    0.192 & 5.0 $\pm$ 0.0 \\
+
 \hline
 \end{tabular}
 \end{minipage}
 \hspace{0.8cm}
 \begin{minipage}[h]{0.45\linewidth}
-\begin{tabular}{lrrrr}
+\begin{tabular}{lllll}
 \hline
- ILFRM    &   global &   precision &   recall &     K-\ensuremath{>} \\
+  ILFRM & global &   precision &   recall &     K-\ensuremath{>} \\
 \hline
- Network1 b/h        &   0.9905 &      0.0401 &   0.0455 & 21 \\
- Network2 b/-h     &   0.9924 &      0.0439 &   0.0545 & 19 \\
- Network3 -b/-h    &   0.9814 &      0.0744 &   0.0785 &  8 \\
- Network4 -b/h      &   0.9345 &      0.4445 &   0.4626 &  8 \\
+ Network1 b/h       &    0.990 &       0.051 &    0.053 & 13.4 $\pm$ 0.8    \\
+ Network2 b/-h     &    0.992 &       0.044 &    0.045 & 14.0 $\pm$ 2.0    \\
+ Network3 -b/h     &    0.982 &       0.114 &    0.116 & 10.0 $\pm$ 2.1 \\
+ Network4 -b/-h     &    0.926 &       0.389 &    0.393 & 7.2 $\pm$ 1.6     \\
+
 \hline
 \end{tabular}
 \end{minipage}
@@ -35,23 +37,23 @@ K = 5\hspace{5pt}
 
 	\begin{minipage}[h]{0.45\linewidth} 
 K = 10
-\begin{tabular}{lrrrr}
+\begin{tabular}{lllll}
+Network1 b/h         &    0.990 &       0.044 &    0.046 & 10.0 $\pm$ 0.0 \\
+ Network2 b/-h       &    0.992 &       0.039 &    0.045 & 10.0 $\pm$ 0.0 \\
+ Network3 -b/h       &    0.979 &       0.030 &    0.035 & 10.0 $\pm$ 0.0 \\
+ Network4 -b/-h       &    0.897 &       0.202 &    0.238 & 10.0 $\pm$ 0.0 \\
 
- Network1 b/h          &   0.9899 &      0.0412 &   0.0445 & 10 \\
- Network2 b/-h       &   0.9917 &      0.0281 &   0.0306 & 10 \\
- Network3 -b/-h      &   0.9791 &      0.0343 &   0.0369 & 10 \\
- Network4 -b/h        &   0.8880 &      0.1591 &   0.2057 & 10 \\
 \hline
 \end{tabular}
 \end{minipage}
 \hspace{0.8cm}
 \begin{minipage}[h]{0.45\linewidth}
-\begin{tabular}{lrrrr}
+\begin{tabular}{lllll}
+ Network1 b/h       &    0.990 &       0.049 &    0.053 & 17.2 $\pm$ 2.8 \\
+ Network2 b/-h     &    0.992 &       0.047 &    0.051 & 17.2 $\pm$ 2.1 \\
+ Network3 -b/h     &    0.982 &       0.132 &    0.132 & 12.2 $\pm$ 2.0 \\
+ Network4 -b/-h     &    0.934 &       0.448 &    0.447 & 9.2 $\pm$ 1.2 \\
 
- Network1 b/h        &   0.9909 &      0.0568 &   0.0592 & 16 \\
- Network2 b/-h     &   0.9922 &      0.0532 &   0.0538 & 13 \\
- Network3 -b/-h    &   0.9816 &      0.0910 &   0.0983 & 11 \\
- Network4 -b/h      &   0.9395 &      0.4970 &   0.4901 & 10 \\
 \hline
 \end{tabular}
 \end{minipage}
@@ -61,22 +63,22 @@ K = 10
 	\begin{minipage}[h]{0.45\linewidth} 
 K = 15
 \begin{tabular}{lrrrr}
+ Network1 b/h         &    0.990 &       0.038 &    0.041 & 15.0 $\pm$ 0.0 \\
+ Network2 b/-h       &    0.992 &       0.036 &    0.038 & 15.0 $\pm$ 0.0 \\
+ Network3 -b/h       &    0.979 &       0.029 &    0.032 & 15.0 $\pm$ 0.0 \\
+ Network4 -b/-h       &    0.898 &       0.207 &    0.245 & 15.0 $\pm$ 0.0 \\
 
- Network1 b/h          &   0.9904 &      0.0392 &   0.0448 & 15 \\
- Network2 b/-h       &   0.9920 &      0.0360 &   0.0338 & 15 \\
- Network3 -b/-h      &   0.9795 &      0.0389 &   0.0436 & 15 \\
- Network4 -b/h        &   0.9083 &      0.2642 &   0.2975 & 15 \\
 \hline
 \end{tabular}
 \end{minipage}
 \hspace{0.8cm}
 \begin{minipage}[h]{0.45\linewidth}
 \begin{tabular}{lrrrr}
+ Network1 b/h       &    0.990 &       0.050 &    0.053 & 20.6 $\pm$ 2.1 \\
+ Network2 b/-h     &    0.992 &       0.049 &    0.055 & 21.2 $\pm$ 2.1 \\
+ Network3 -b/h     &    0.983 &       0.164 &    0.166 & 17.2 $\pm$ 1.3 \\
+ Network4 -b/-h     &    0.939 &       0.499 &    0.501 & 14.8 $\pm$ 0.4    \\
 
- Network1 b/h        &   0.9901 &      0.0624 &   0.0642 & 23 \\
- Network2 b/-h     &   0.9917 &      0.0599 &   0.0665 & 24 \\
- Network3 -b/-h    &   0.9825 &      0.1425 &   0.1478 & 15 \\
- Network4 -b/h      &   0.9390 &      0.4994 &   0.5032 & 15 \\
 \hline
 \end{tabular}
 \end{minipage}
@@ -97,11 +99,10 @@ K = 20
 \hspace{0.8cm}
 \begin{minipage}[h]{0.45\linewidth}
 \begin{tabular}{lrrrr}
-
- Network1 b/h        &      nan &         nan &      nan &   nan \\
- Network2 b/-h     &      nan &         nan &      nan &   nan \\
- Network3 -b/-h    &      nan &         nan &      nan &   nan \\
- Network4 -b/h      &      nan &         nan &      nan &   nan \\
+Network1 b/h       &   0.9902 &      0.0641 &   0.0626 &  23 \\
+Network2 b/-h     &   0.9915 &      0.0477 &   0.0636 & 17 \\
+Network3 -b/h     &   0.9827 &      0.1523 &   0.1518 &  20 \\
+Network4 -b/-h     &   0.9396 &      0.4986 &   0.5053 &  22 \\
 \hline
 \end{tabular}
 \end{minipage}
@@ -128,10 +129,11 @@ K =  5\hspace{5pt}
 \hline
  IMMSB   &   global &   precision &   recall &    K-\ensuremath{>} \\
 \hline
- Network1 b/h           &   0.5625 &      0.9130 &   0.0218 & 5 \\
- Network2 b/-h        &   0.5597 &      0.7857 &   0.0278 & 5 \\
- Network4 -b/h         &   0.5542 &      0.7202 &   0.1593 & 5 \\
- Network3 -b/-h       &   0.5466 &      0.7159 &   0.0316 & 5 \\
+ Network1 b/h          &    0.549 &       0.758 &    0.022 & 5.0 $\pm$ 0.0 \\
+ Network2 b/-h        &    0.558 &       0.834 &    0.019 & 5.0 $\pm$ 0.0 \\
+ Network3 -b/h        &    0.527 &       0.729 &    0.027 & 5.0 $\pm$ 0.0 \\
+ Network4 -b/-h        &    0.557 &       0.743 &    0.162 & 5.0 $\pm$ 0.0 \\
+
 \hline
 \end{tabular}
 \end{minipage}
@@ -141,10 +143,11 @@ K =  5\hspace{5pt}
 \hline
  ILFRM   &   global &   precision &   recall &     K-\ensuremath{>} \\
 \hline
- Network1 b/h         &   0.5573 &      0.8958 &   0.0432 & 14 \\
- Network2 b/-h      &   0.5503 &      0.9000 &   0.0322 & 17 \\
- Network4 -b/h       &   0.6357 &      0.8818 &   0.3085 &  8 \\
- Network3 -b/-h     &   0.5788 &      0.9459 &   0.1082 &  9 \\
+ Network1 b/h        &    0.568 &       0.912 &    0.047 & 13.6 $\pm$ 2.3 \\
+ Network2 b/-h      &    0.574 &       0.893 &    0.041 & 16.4 $\pm$ 3.4 \\
+ Network3 -b/h      &    0.571 &       0.912 &    0.100 & 9.2 $\pm$ 1.3 \\
+ Network4 -b/-h      &    0.668 &       0.906 &    0.362 & 7.6 $\pm$ 1.3 \\
+
 \hline
 \end{tabular}
 \end{minipage}
@@ -154,21 +157,22 @@ K =  5\hspace{5pt}
 	\begin{minipage}[h]{0.45\linewidth} 
 K = 10
 \begin{tabular}{lrrrr}
- Network1 b/h           &   0.5351 &      0.8529 &   0.0268 & 10 \\
- Network2 b/-h        &   0.5426 &      0.9259 &   0.0291 & 10 \\
- Network4 -b/h         &   0.5558 &      0.7324 &   0.1647 & 10 \\
- Network3 -b/-h       &   0.5355 &      0.7654 &   0.0308 & 10 \\
+ Network1 b/h          &    0.558 &       0.842 &    0.028 & 10.0 $\pm$ 0.0 \\
+ Network2 b/-h        &    0.567 &       0.926 &    0.034 & 10.0 $\pm$ 0.0 \\
+ Network3 -b/h        &    0.530 &       0.776 &    0.027 & 10.0 $\pm$ 0.0 \\
+ Network4 -b/-h        &    0.567 &       0.764 &    0.184 & 10.0 $\pm$ 0.0 \\
+
 \hline
 \end{tabular}
 \end{minipage}
 \hspace{0.8cm}
 \begin{minipage}[h]{0.45\linewidth}
 \begin{tabular}{lrrrr}
+ Network1 b/h        &    0.556 &       0.928 &    0.044 & 17.2 $\pm$ 2.0 \\
+ Network2 b/-h      &    0.573 &       0.935 &    0.041 & 17.6 $\pm$ 3.2    \\
+ Network3 -b/h      &    0.579 &       0.947 &    0.118 & 12.8 $\pm$ 0.9 \\
+ Network4 -b/-h      &    0.718 &       0.943 &    0.457 & 10.8 $\pm$ 0.7 \\
 
- Network1 b/h         &   0.5763 &      0.9783 &   0.0458 & 21 \\
- Network2 b/-h      &   0.5590 &      0.8947 &   0.0403 & 14 \\
- Network4 -b/h       &   0.7247 &      0.9451 &   0.4693 & 11 \\
- Network3 -b/-h     &   0.5836 &      0.9549 &   0.1270 & 13 \\
 \hline
 \end{tabular}
 \end{minipage}
@@ -178,22 +182,22 @@ K = 10
 	\begin{minipage}[h]{0.45\linewidth} 
 K = 15
 \begin{tabular}{lrrrr}
+ Network1 b/h          &    0.555 &       0.871 &    0.035 & 15.0 $\pm$ 0.0 \\
+ Network2 b/-h        &    0.570 &       0.854 &    0.030 & 15.0 $\pm$ 0.0 \\
+ Network3 -b/h        &    0.532 &       0.728 &    0.027 & 15.0 $\pm$ 0.0 \\
+ Network4 -b/-h        &    0.565 &       0.757 &    0.178 & 15.0 $\pm$ 0.0 \\
 
- Network1 b/h           &   0.5595 &      0.9250 &   0.0383 & 15 \\
- Network2 b/-h        &   0.5869 &      0.7692 &   0.0384 & 15 \\
- Network4 -b/h         &   0.5758 &      0.8052 &   0.1983 & 15 \\
- Network3 -b/-h       &   0.5266 &      0.7753 &   0.0341 & 15 \\
 \hline
 \end{tabular}
 \end{minipage}
 \hspace{0.8cm}
 \begin{minipage}[h]{0.45\linewidth}
 \begin{tabular}{lrrrr}
+ Network1 b/h        &    0.569 &       0.928 &    0.046 & 20.8 $\pm$ 1.3 \\
+ Network2 b/-h      &    0.564 &       0.903 &    0.042 & 21.6 $\pm$ 2.4 \\
+ Network3 -b/h      &    0.594 &       0.952 &    0.153 & 18.0 $\pm$ 0.8 \\
+ Network4 -b/-h      &    0.723 &       0.945 &    0.467 & 15.0 $\pm$ 0.0    \\
 
- Network1 b/h         &   0.5618 &      0.9792 &   0.0465 & 20 \\
- Network2 b/-h      &   0.5667 &      0.9783 &   0.0560 & 23 \\
- Network4 -b/h       &   0.7208 &      0.9455 &   0.4674 & 15 \\
- Network3 -b/-h     &   0.5862 &      0.9422 &   0.1301 & 15 \\
 \hline
 \end{tabular}
 \end{minipage}
@@ -206,8 +210,8 @@ K = 20
 
  Network1 b/h           &   0.5501 &      0.8980 &   0.0425 & 20 \\
  Network2 b/-h        &   0.5734 &      0.9615 &   0.0326 & 20 \\
- Network4 -b/h         &   0.5577 &      0.7475 &   0.1662 & 20 \\
  Network3 -b/-h       &   0.5286 &      0.6456 &   0.0255 & 20 \\
+ Network4 -b/h         &   0.5577 &      0.7475 &   0.1662 & 20 \\
 \hline
 \end{tabular}
 \end{minipage}
@@ -216,8 +220,8 @@ K = 20
 \begin{tabular}{lrrrr}
  Network1 b/h         &   0.5428 &      0.9737 &   0.0359 &  21 \\
  Network2 b/-h      &   0.5577 &      0.8462 &   0.0389 &  20 \\
- Network4 -b/h       & nan      &    nan      & nan      & nan      \\
  Network3 -b/-h     &   0.5997 &      0.9503 &   0.1630 &  22 \\
+ Network4 -b/-h      &   0.7291 &      0.9473 &   0.4813 & 20 \\
 \hline
 \end{tabular}
 \end{minipage}
