--- a/table_results.tex
+++ b/table_results.tex
@@ -12,8 +12,8 @@ K = 5\hspace{5pt}
 \hline
  Network1 b/h         &    0.990 &       0.029 &    0.032 & 5.0 $\pm$ 0.0 \\
  Network2 b/-h       &    0.992 &       0.032 &    0.034 & 5.0 $\pm$ 0.0 \\
- Network3 -b/h       &    0.979 &       0.031 &    0.034 & 5.0 $\pm$ 0.0 \\
- Network4 -b/-h       &    0.887 &       0.151 &    0.192 & 5.0 $\pm$ 0.0 \\
+ Network3 -b/-h       &    0.979 &       0.031 &    0.034 & 5.0 $\pm$ 0.0 \\
+ Network4 -b/h       &    0.887 &       0.151 &    0.192 & 5.0 $\pm$ 0.0 \\
 
 \hline
 \end{tabular}
@@ -22,12 +22,12 @@ K = 5\hspace{5pt}
 \begin{minipage}[h]{0.45\linewidth}
 \begin{tabular}{lllll}
 \hline
-  ILFRM & global &   precision &   recall &     K-\ensuremath{>} \\
+  ILFM & global &   precision &   recall &     K-\ensuremath{>} \\
 \hline
  Network1 b/h       &    0.990 &       0.051 &    0.053 & 13.4 $\pm$ 0.8    \\
  Network2 b/-h     &    0.992 &       0.044 &    0.045 & 14.0 $\pm$ 2.0    \\
- Network3 -b/h     &    0.982 &       0.114 &    0.116 & 10.0 $\pm$ 2.1 \\
- Network4 -b/-h     &    0.926 &       0.389 &    0.393 & 7.2 $\pm$ 1.6     \\
+ Network3 -b/-h     &    0.982 &       0.114 &    0.116 & 10.0 $\pm$ 2.1 \\
+ Network4 -b/h     &    0.926 &       0.389 &    0.393 & 7.2 $\pm$ 1.6     \\
 
 \hline
 \end{tabular}
@@ -40,8 +40,8 @@ K = 10
 \begin{tabular}{lllll}
 Network1 b/h         &    0.990 &       0.044 &    0.046 & 10.0 $\pm$ 0.0 \\
  Network2 b/-h       &    0.992 &       0.039 &    0.045 & 10.0 $\pm$ 0.0 \\
- Network3 -b/h       &    0.979 &       0.030 &    0.035 & 10.0 $\pm$ 0.0 \\
- Network4 -b/-h       &    0.897 &       0.202 &    0.238 & 10.0 $\pm$ 0.0 \\
+ Network3 -b/-h       &    0.979 &       0.030 &    0.035 & 10.0 $\pm$ 0.0 \\
+ Network4 -b/h       &    0.897 &       0.202 &    0.238 & 10.0 $\pm$ 0.0 \\
 
 \hline
 \end{tabular}
@@ -51,8 +51,8 @@ Network1 b/h         &    0.990 &       0.044 &    0.046 & 10.0 $\pm$ 0.0 \\
 \begin{tabular}{lllll}
  Network1 b/h       &    0.990 &       0.049 &    0.053 & 17.2 $\pm$ 2.8 \\
  Network2 b/-h     &    0.992 &       0.047 &    0.051 & 17.2 $\pm$ 2.1 \\
- Network3 -b/h     &    0.982 &       0.132 &    0.132 & 12.2 $\pm$ 2.0 \\
- Network4 -b/-h     &    0.934 &       0.448 &    0.447 & 9.2 $\pm$ 1.2 \\
+ Network3 -b/-h     &    0.982 &       0.132 &    0.132 & 12.2 $\pm$ 2.0 \\
+ Network4 -b/h     &    0.934 &       0.448 &    0.447 & 9.2 $\pm$ 1.2 \\
 
 \hline
 \end{tabular}
@@ -65,8 +65,8 @@ K = 15
 \begin{tabular}{lrrrr}
  Network1 b/h         &    0.990 &       0.038 &    0.041 & 15.0 $\pm$ 0.0 \\
  Network2 b/-h       &    0.992 &       0.036 &    0.038 & 15.0 $\pm$ 0.0 \\
- Network3 -b/h       &    0.979 &       0.029 &    0.032 & 15.0 $\pm$ 0.0 \\
- Network4 -b/-h       &    0.898 &       0.207 &    0.245 & 15.0 $\pm$ 0.0 \\
+ Network3 -b/-h       &    0.979 &       0.029 &    0.032 & 15.0 $\pm$ 0.0 \\
+ Network4 -b/h       &    0.898 &       0.207 &    0.245 & 15.0 $\pm$ 0.0 \\
 
 \hline
 \end{tabular}
@@ -76,8 +76,8 @@ K = 15
 \begin{tabular}{lrrrr}
  Network1 b/h       &    0.990 &       0.050 &    0.053 & 20.6 $\pm$ 2.1 \\
  Network2 b/-h     &    0.992 &       0.049 &    0.055 & 21.2 $\pm$ 2.1 \\
- Network3 -b/h     &    0.983 &       0.164 &    0.166 & 17.2 $\pm$ 1.3 \\
- Network4 -b/-h     &    0.939 &       0.499 &    0.501 & 14.8 $\pm$ 0.4    \\
+ Network3 -b/-h     &    0.983 &       0.164 &    0.166 & 17.2 $\pm$ 1.3 \\
+ Network4 -b/h     &    0.939 &       0.499 &    0.501 & 14.8 $\pm$ 0.4    \\
 
 \hline
 \end{tabular}
@@ -101,8 +101,8 @@ K = 20
 \begin{tabular}{lrrrr}
 Network1 b/h       &   0.9902 &      0.0641 &   0.0626 &  23 \\
 Network2 b/-h     &   0.9915 &      0.0477 &   0.0636 & 17 \\
-Network3 -b/h     &   0.9827 &      0.1523 &   0.1518 &  20 \\
-Network4 -b/-h     &   0.9396 &      0.4986 &   0.5053 &  22 \\
+Network3 -b/-h     &   0.9827 &      0.1523 &   0.1518 &  20 \\
+Network4 -b/h     &   0.9396 &      0.4986 &   0.5053 &  22 \\
 \hline
 \end{tabular}
 \end{minipage}
@@ -131,8 +131,8 @@ K =  5\hspace{5pt}
 \hline
  Network1 b/h          &    0.549 &       0.758 &    0.022 & 5.0 $\pm$ 0.0 \\
  Network2 b/-h        &    0.558 &       0.834 &    0.019 & 5.0 $\pm$ 0.0 \\
- Network3 -b/h        &    0.527 &       0.729 &    0.027 & 5.0 $\pm$ 0.0 \\
- Network4 -b/-h        &    0.557 &       0.743 &    0.162 & 5.0 $\pm$ 0.0 \\
+ Network3 -b/-h        &    0.527 &       0.729 &    0.027 & 5.0 $\pm$ 0.0 \\
+ Network4 -b/h        &    0.557 &       0.743 &    0.162 & 5.0 $\pm$ 0.0 \\
 
 \hline
 \end{tabular}
@@ -141,12 +141,12 @@ K =  5\hspace{5pt}
 \begin{minipage}[h]{0.45\linewidth}
 \begin{tabular}{lrlll}
 \hline
- ILFRM   &   global &   precision &   recall &     K-\ensuremath{>} \\
+ ILFM   &   global &   precision &   recall &     K-\ensuremath{>} \\
 \hline
  Network1 b/h        &    0.568 &       0.912 &    0.047 & 13.6 $\pm$ 2.3 \\
  Network2 b/-h      &    0.574 &       0.893 &    0.041 & 16.4 $\pm$ 3.4 \\
- Network3 -b/h      &    0.571 &       0.912 &    0.100 & 9.2 $\pm$ 1.3 \\
- Network4 -b/-h      &    0.668 &       0.906 &    0.362 & 7.6 $\pm$ 1.3 \\
+ Network3 -b/-h      &    0.571 &       0.912 &    0.100 & 9.2 $\pm$ 1.3 \\
+ Network4 -b/h      &    0.668 &       0.906 &    0.362 & 7.6 $\pm$ 1.3 \\
 
 \hline
 \end{tabular}
@@ -159,8 +159,8 @@ K = 10
 \begin{tabular}{lrrrr}
  Network1 b/h          &    0.558 &       0.842 &    0.028 & 10.0 $\pm$ 0.0 \\
  Network2 b/-h        &    0.567 &       0.926 &    0.034 & 10.0 $\pm$ 0.0 \\
- Network3 -b/h        &    0.530 &       0.776 &    0.027 & 10.0 $\pm$ 0.0 \\
- Network4 -b/-h        &    0.567 &       0.764 &    0.184 & 10.0 $\pm$ 0.0 \\
+ Network3 -b/-h        &    0.530 &       0.776 &    0.027 & 10.0 $\pm$ 0.0 \\
+ Network4 -b/h        &    0.567 &       0.764 &    0.184 & 10.0 $\pm$ 0.0 \\
 
 \hline
 \end{tabular}
@@ -170,8 +170,8 @@ K = 10
 \begin{tabular}{lrrrr}
  Network1 b/h        &    0.556 &       0.928 &    0.044 & 17.2 $\pm$ 2.0 \\
  Network2 b/-h      &    0.573 &       0.935 &    0.041 & 17.6 $\pm$ 3.2    \\
- Network3 -b/h      &    0.579 &       0.947 &    0.118 & 12.8 $\pm$ 0.9 \\
- Network4 -b/-h      &    0.718 &       0.943 &    0.457 & 10.8 $\pm$ 0.7 \\
+ Network3 -b/-h      &    0.579 &       0.947 &    0.118 & 12.8 $\pm$ 0.9 \\
+ Network4 -b/h      &    0.718 &       0.943 &    0.457 & 10.8 $\pm$ 0.7 \\
 
 \hline
 \end{tabular}
@@ -184,8 +184,8 @@ K = 15
 \begin{tabular}{lrrrr}
  Network1 b/h          &    0.555 &       0.871 &    0.035 & 15.0 $\pm$ 0.0 \\
  Network2 b/-h        &    0.570 &       0.854 &    0.030 & 15.0 $\pm$ 0.0 \\
- Network3 -b/h        &    0.532 &       0.728 &    0.027 & 15.0 $\pm$ 0.0 \\
- Network4 -b/-h        &    0.565 &       0.757 &    0.178 & 15.0 $\pm$ 0.0 \\
+ Network3 -b/-h        &    0.532 &       0.728 &    0.027 & 15.0 $\pm$ 0.0 \\
+ Network4 -b/h        &    0.565 &       0.757 &    0.178 & 15.0 $\pm$ 0.0 \\
 
 \hline
 \end{tabular}
@@ -195,8 +195,8 @@ K = 15
 \begin{tabular}{lrrrr}
  Network1 b/h        &    0.569 &       0.928 &    0.046 & 20.8 $\pm$ 1.3 \\
  Network2 b/-h      &    0.564 &       0.903 &    0.042 & 21.6 $\pm$ 2.4 \\
- Network3 -b/h      &    0.594 &       0.952 &    0.153 & 18.0 $\pm$ 0.8 \\
- Network4 -b/-h      &    0.723 &       0.945 &    0.467 & 15.0 $\pm$ 0.0    \\
+ Network3 -b/-h      &    0.594 &       0.952 &    0.153 & 18.0 $\pm$ 0.8 \\
+ Network4 -b/h      &    0.723 &       0.945 &    0.467 & 15.0 $\pm$ 0.0    \\
 
 \hline
 \end{tabular}
@@ -221,9 +221,37 @@ K = 20
  Network1 b/h         &   0.5428 &      0.9737 &   0.0359 &  21 \\
  Network2 b/-h      &   0.5577 &      0.8462 &   0.0389 &  20 \\
  Network3 -b/-h     &   0.5997 &      0.9503 &   0.1630 &  22 \\
- Network4 -b/-h      &   0.7291 &      0.9473 &   0.4813 & 20 \\
+ Network4 -b/h      &   0.7291 &      0.9473 &   0.4813 & 20 \\
 \hline
 \end{tabular}
 \end{minipage}
 \end{table*}
 
+
+\begin{table}
+    \caption{Homohily test for IMMSB fit on diferent configarations}
+\begin{tabular}{lrrrr}
+\hline
+IMMSB / Balanced   &     5 &    10 &    15 &    20 \\
+\hline
+Network 1 b/h          & 0.066 & 0.100 & 0.109 & 0.127 \\
+Network 2 b/-h        & 0.065 & 0.100 & 0.141 & 0.126 \\
+Network 3 -b/-h       & 0.035 & 0.083 & 0.067 & 0.076 \\
+Network 4 -b/h         & 0.421 & 0.450 & 0.460 & 0.460 \\
+\hline
+\end{tabular}
+\end{table}
+
+\begin{table}
+    \caption{Homohily test for ILFM fit on different configurations}
+\begin{tabular}{lrrrr}
+\hline
+ILFM / Balanced   &     5 &    10 &    15 &    20 \\
+\hline
+Network 1 b/h        & 0.010 & 0.140 & 0.128 & 0.223 \\
+Network 2 b/-h      & 0.097 & 0.079 & 0.245 & 0.147 \\
+Network 3 -b/-h     & 0.037 & 0.084 & 0.131 & 0.184 \\
+Network 4 -b/h       & 0.181 & 0.442 & 0.479 & 0.503 \\
+\hline
+\end{tabular}
+\end{table}
