--- a/img/mmsb2.tex
+++ b/img/mmsb2.tex
@@ -7,7 +7,7 @@
   \node[latent, above= of y]    (ibp) {$\mat{F}$};;
   \node[latent, below= of y, yshift=-0.3cm]   (W) {$\mat{\Phi}$};
   \node[const, left=0.7cm of ibp]   (a) {$\alpha_0$};
-  \node[latent, right=0.7cm of ibp]   (b) {$\mat{\beta}$};
+  \node[latent, right=0.7cm of ibp]   (b) {$\bm{\beta}$};
   \node[const, above=of b, , yshift=-0.1cm]   (g) {$\gamma$};
   \node[const, right=0.7cm of W]   (sw) {($\lambda_0,\lambda_1$)};
 
