--- a/main.tex
+++ b/main.tex
@@ -44,8 +44,8 @@
     
 \newcommand{\mat}[1]{\mathbf{#1}}
 
-\title{Nonparametric Latent feature/class Analysis for Link Prediction in Social Networks}
-%\title{Are latent feature/class models adapted for link prediction in social networks?}
+\title{Are latent feature/class models adapted for link prediction in social networks?}
+%\title{Social Networks Topology Analysis with Bayesian Perspective}
 %\title{Mixed Membership Models Analysis for Social Networks Topology}
 
 %\date{avril 2015}
