--- a/models.tex
+++ b/models.tex
@@ -92,7 +92,7 @@ where $\gem$ denotes the Griffiths, ??? distribution over the set of natural num
    \begin{align}
     z_{i \rightarrow j} &\sim \mbox{Cat}(\mat{f}_i) \nonumber \\
     z_{i \leftarrow j} &\sim \mbox{Cat}(\mat{f}_j) \nonumber \\
-    y_{ij} &\sim \mathrm{Bern}(\phi_{z_{i \rightarrow j}f_{i \leftarrow j}})
+    y_{ij} &\sim \mathrm{Bern}(\phi_{z_{i \rightarrow j}z_{i \leftarrow j}})
     \label{eq:link-immsb}
    \end{align}
 \end{enumerate}
