--- a/motiv.tex
+++ b/motiv.tex
@@ -13,5 +13,5 @@ Recently, several complex Bayesian models based on latent variables have been us
 
 In the next section we will, first, explain the mathematical background in a machine learning context. Secondly, we will review the models of interest for dyadic data. Then, we will introduce the formal definition of properties of interest in social networks within the Bayesian frameworks, and how this is translated in terms of assumptions within Bayesian priors. Finally, we will show empirical results (on synthetic and real datasets) to support our claims.~\\
 
-%Study the poisson binomial distribution for the out links of a node. This is the degree distribution and should be bursty to have commmunity in networks.
+%Study the poisson binomial distribution for the out links of a node. This is the degree distribution and should be bursty to have community in networks.
 
