--- a/a.bib
+++ b/a.bib
@@ -387,10 +387,17 @@ publisher={JSTOR}
     year={2014},
     publisher={CRC Press}
 }
-<<<<<<< Updated upstream
+@article{albert2002statistical,
+    title={Statistical mechanics of complex networks},
+    author={Albert, R{\'e}ka and Barab{\'a}si, Albert-L{\'a}szl{\'o}},
+    journal={Reviews of modern physics},
+    volume={74},
+    number={1},
+    pages={47},
+    year={2002},
+    publisher={APS}
+}
 
-
-=======
 
 @BOOK{feller_68,
 	AUTHOR = "W. Feller",
@@ -405,4 +412,3 @@ publisher={JSTOR}
 	PUBLISHER = "{PLUME}, Penguin Book, USA",
 	YEAR = "2011"
 }
->>>>>>> Stashed changes
