--- a/related_work.tex
+++ b/related_work.tex
@@ -1,13 +1,9 @@
 \section{Related Work}
-= Prop
-Burstiness on topic model:
-Modeling Word Burstiness Using the Dirichlet Distribution (DCM)
-Accounting for Burstiness in Topic Models (DCMLDA)
-LDA bursty on topics
-Proposal of a-MMSB in : Scalable Inference of Overlapping Communities
-with high diagonal only...
 
-to read: Stochastic blockmodels and community structure in networks
+%Burstiness on topic model:
+%Modeling Word Burstiness Using the Dirichlet Distribution (DCM)
+%Accounting for Burstiness in Topic Models (DCMLDA)
+%Proposal of a-MMSB in : Scalable Inference of Overlapping Communities with high diagonal only...
 
-
+%to read: Stochastic blockmodels and community structure in networks
 
